sf-hrms/force-app/main/default/objects/Loan__c/fields/EMI__c.field-meta.xml
<CustomField><fullName>EMI__c</fullName><label>EMI</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>