sf-hrms/force-app/main/default/objects/Loan__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Loans</relationshipLabel><relationshipName>Loans</relationshipName></CustomField>