sf-hrms/force-app/main/default/objects/Loan__c/fields/Outstanding__c.field-meta.xml
<CustomField><fullName>Outstanding__c</fullName><label>Outstanding</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>