sf-hrms/force-app/main/default/objects/Loan__c/fields/Principal__c.field-meta.xml
<CustomField><fullName>Principal__c</fullName><label>Principal</label><type>Currency</type><precision>18</precision><scale>2</scale></CustomField>