sf-hrms/force-app/main/default/objects/Loan__c/fields/Tenure_Months__c.field-meta.xml
<CustomField><fullName>Tenure_Months__c</fullName><label>Tenure (Months)</label><type>Number</type><precision>3</precision><scale>0</scale></CustomField>