sf-hrms/force-app/main/default/objects/Loan__c/fields/Type__c.field-meta.xml
<CustomField><fullName>Type__c</fullName><label>Loan Type</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Salary Advance</fullName><default>false</default></value><value><fullName>Personal</fullName><default>false</default></value><value><fullName>Education</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>