sf-hrms/force-app/main/default/objects/Loan__c/validationRules/Outstanding_LE_Principal.validationRule-meta.xml
<ValidationRule>
    <fullName>Outstanding_LE_Principal</fullName>
    <active>true</active>
    <errorConditionFormula>Outstanding__c &gt; Principal__c</errorConditionFormula>
    <errorMessage>Outstanding amount cannot exceed principal.</errorMessage>
</ValidationRule>